--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         </a>
                         <span>Dec,2021</span>
                         <p>Created a portfolio website using knowledge of html,css and js!</p>
-                        <a href="#">link</a>
+                        <a href="https://github.com/mitaligarg027/mitaligarg027.github.io.git">link</a>
                     </div>
                 </div>
             </div>
