--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="card">
                     <div class="overlay">
                         <span>Category</span>
-                        <a href="https://drive.google.com/file/d/17IqXJxjdk_jrC03ULLHRdY3zs6N8N0ns/view?usp=sharing" target="_blank">Qwiklab badges</a>
+                        <a href="https://drive.google.com/file/d/1ZTuHiPAwgpy9IcSHpGgnUjVr6pGMBTMs/view?usp=share_link" target="_blank">AICTE internship</a>
                     </div>
                     <img src="./images/aicte internship.pdf and 1 more page - Personal - Microsoft​ Edge 09-02-2023 23_21_45 (2).png" alt="">
                 </div>
@@ -244,9 +244,9 @@
                 <div class="card">
                     <div class="overlay">
                         <span>Category</span>
-                        <a href="#">GDSC goodies</a>
+                        <a href="https://drive.google.com/file/d/1CEkbfB9aT5AX_coAibxAxeoquRAeKf8q/view?usp=share_link">oracle</a>
                     </div>
-                    <img src="./images/ph-1.png" alt="">
+                    <img src="./images/eCertificate OCI.pdf - Work - Microsoft​ Edge 1_20_2022 8_32_35 PM.png" alt="">
                 </div>
             </div>
         </div>
